autocomplite - city json reader ready